# ArtifactWidgets

./: ArtifactWidgets.qtvscr  ArtifactWidgets.sln.old  ArtifactWidgets.vcxproj  ArtifactWidgets.vcxproj.bak  ArtifactWidgets.vcxproj.filters  ArtifactWidgets.vcxproj.filters.bak  ArtifactWidgetsdd.exp  ArtifactWidgetsdd.lib  CMakeLists.txt  HeadPanel.ixx
include/: ArtifactAbstractWidget.hpp  Defines.hpp
include/3D/: ModelViewer.ixx
include/Audio/: AudioBusWidget.hpp  AudioBusWidget.ixx  AudioDllImport.hpp  AudioInclude.hpp  VolumeSlider.hpp  VolumeSlider.ixx
include/Button/: ColorPickerButton.ixx  FloatColorPickerButton.ixx  SubToolButton.ixx
include/Code/: CodeEditor.ixx  SyntaxHighlighter.ixx
include/Color/: ColorViewLabel.ixx  ColorWheel.ixx  HistgramWidget.hpp  HistgramWidget.ixx  ParadeScopeWidget.hpp  ParadeScopeWidget.ixx  VectorScopeWidget.hpp  VectorScopeWidget.ixx  WaveformScopeWidget.ixx
include/Common/: AbstractDialog.hpp  AbstractDialog.ixx  AbstractWidget.hpp  AbstractWidget.ixx  AlignmentCombobox.hpp  AlignmentCombobox.ixx  AppProgress.ixx  ClickableLabel.ixx  CollapsibleSection.ixx  CommandAction.hpp  CommandAction.ixx  CommonApplicationSignal.Temp.axt  CommonApplicationSignal.hpp  CommonApplicationSignal.ixx  CommonHeader.hpp  CommonImports.hpp  CommonImports.ixx  DragSpinBox.ixx  EditableLabel.ixx  EnhancedSlider.ixx  IClonableWidget.ixx  ToggleGlyphButton.ixx  WidgetCounter.ixx  WinJumpList.ixx  WinTaskbarProgress.ixx
include/Console/: ConsoleWidget.ixx
include/Define/: DllExportMacro.hpp
include/Dialog/: ArtifactMessageBox.ixx  FloatColorPicker.ixx  InterpretFootageDialog.ixx  KeyboardOverlayDialog.ixx
include/Dock/: DockWidget.hpp  DockWidget.ixx  HeadPanel.ixx  Pane.ixx
include/Effect/: WidgetGlowFrame.ixx
include/Graphics/: GraphicsItemFloatImageItem.hpp  GraphicsItemFloatImageItem.ixx
include/Image/: BasicImageViewWidget.hpp  BasicImageViewWidget.ixx
include/Interface/: IViewer.ixx
include/Knob/: AbstractKnobEditor.hpp  AbstractKnobEditor.ixx  KnobCheckBox.hpp  KnobCheckBox.ixx  KnobColorPicker.hpp  KnobColorPicker.ixx  KnobDllImports.hpp  KnobEditorWidget.ixx  KnobSlider.ixx  RotaryKnob.ixx
include/Panel/: DraggableSplitter.ixx
include/Platform/: QuickLook.ixx
include/Platform/Mac/: TouchBar.ixx
include/Preview/: PreviewControlWidget.ixx
include/Render/: BackendSettingWidget.ixx  RayTracerWidget.ixx  RenderQueueManagerWidget.ixx
include/Search/: SearchWidget.ixx
include/Style/: AccentDelegate.ixx
include/Time/: TimeCodeEditor.ixx  TimeCodeLabel.ixx
include/Utils/: RevalFileManager.ixx
include/Video/: ArtifactBasicVideoPreviewWidget.hpp  ArtifactBasicVideoPreviewWidget.ixx
include/Viewer/: ContentViewer.ixx
include/Web/: WebBrowser.ixx
lib/: qtadvanceddockingd.lib
src/: AbstractWidget.cpp  AbstractWidget.cppm
src/Audio/: AudioBusWidget.cpp  AudioBusWidget.cppm
src/Button/: FloatColorPickerButton.cpp  FloatColorPickerButton.cppm
src/Code/: CodeEditor.cppm  SyntaxHighlighter.cppm
src/Color/: ColorViewLabel.cpp  ColorWheel.cpp  ColorWheel.cppm  HistgramWidget.cpp  HistgramWidget.cppm  ParadeScopeWidget.cpp  VectorScopeWidget.cpp  VectorScopeWidget.cppm  WaveformScopeWidget.cpp  WaveformScopeWidget.cppm
src/Common/: AbstractDialog.cpp  AbstractDialog.cppm  AbstractWidget.cppm  AlignmentComboBox.cpp  AppProgress_Mac.mm  AppProgress_Win.cppm  ClickableLabel.cppm  CollapsibleSection.cpp  CommandAction.cpp  DragSpinBox.cpp  DragSpinBox.cppm  EditableLabel.cppm  EnhancedSlider.cppm  HeadPanel.cpp  HeadPanel.cppm  ToggleGlyphButton.cpp  ToggleGlyphButton.cppm  WidgetCounter.cpp  WinJumpList.cppm  WinTaskbarProgress.cppm
src/Console/: ConsoleWidget.cpp  ConsoleWidget.cppm
src/Dialog/: ArtifactMessageBox.cppm  FloatColorPicker.cppm  FloatColorPicker.ixx  InterpretFootageDialog.cpp  InterpretFootageDialog.cppm  KeyboardOverlayDialog.cpp  KeyboardOverlayDialog.cppm
src/Dock/: Pane.cpp  Pane.cppm
src/Effect/: WidgetGlowFrame.cpp
src/Graphics/: GraphicsItemFloatImageItem.cpp
src/Image/: BasicImageViewWidget.cpp  BasicImageViewWidget.cppm
src/Knob/: AbstractKnobEditor.cpp  AbstractKnobEditor.cppm  KnobSlider.cpp  VolumeSlider.cpp  VolumeSlider.cppm
src/Knob/KnobEditorWidget/: KnobCheckBox.cpp  KnobCheckBox.cppm  RotaryKnob.cpp
src/Platform/Mac/: QuickLook.mm  TouchBar.mm
src/Preview/: PreviewControlWidget.cpp
src/Render/: RayTracerWidget.cppm  RenderQueueManagerWidget.cpp  RenderQueueManagerWidget.cppm
src/Time/: TimeCodeEditor.cpp  TimeCodeLabel.cppm
src/Video/: ArtifactBasicPreviewWidget.cpp  ArtifactBasicVideoPreviewWidget.cpp  ArtifactBasicVideoPreviewWidget.cppm
src/Viewer/: ContentViewer.cppm  ModelViewer.cpp  ModelViewer.cppm
